# mini_python_projects

./: pyproject.toml
dashboard_prototype/: .gitignore  README.md  check_users.py  docker-compose.yml
dashboard_prototype/backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
dashboard_prototype/backend/alembic/: env.py
dashboard_prototype/backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py  metrics_client.py  prometheus_metrics.py  seed.py
dashboard_prototype/backend/app/api/: bots.py  logs.py  metrics.py  screenshots.py
dashboard_prototype/backend/app/auth/: dependencies.py
dashboard_prototype/backend/app/models/: __init__.py  bot.py  bot_run.py  client.py  log.py
dashboard_prototype/backend/app/schemas/: __init__.py  bot.py  bot_run.py  log.py
dashboard_prototype/backend/app/services/: base.py  bot_service.py  metric_service.py  run_service.py
dashboard_prototype/backend/app/tasks/: bot_tasks.py  internal_client.py
dashboard_prototype/backend/app/ws/: status.py
dashboard_prototype/docs/: architecture.md
dashboard_prototype/frontend/: Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json
dashboard_prototype/frontend/src/: App.css  App.tsx  index.css
dashboard_prototype/monitoring/: Dockerfile  README.md  prometheus.yml  pyproject.toml
dashboard_prototype/worker/: README.md  celery_worker.py  requirements.txt
dashboard_prototype/worker/bots/: sample_bot.py
dashboard_prototype/worker/utils/: logger.py  screenshot.py  (+1 more)
game/: README.md
game/tic_tac_toe/: README.md  board.py  cell.py  main.py  pyproject.toml  setting.py  utils.py
python_training/: ex1.py  ex10.py  ex11.py  ex12.py  ex13.py  ex14.py  ex15.py  ex16.py  ex17.py  ex18.py  ex19.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py
(+45 files in other folders)
