[project]
name = "mini-python-projects"
version = "0.2.0"
description = "A comprehensive collection of mini Python projects demonstrating various programming concepts and libraries"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "dev@example.com"}
]

dependencies = [
    "kivy>=2.3.1",
    "python-vlc>=3.0.21203",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0",
    "pyttsx3>=2.90",
    "PyPDF2>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "pyarrow>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

web = [
    "selenium>=4.0.0",
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.uv.workspace]
members = [
    "dashboard_prototype/backend",
    "dashboard_prototype/monitoring",
    "dashboard_prototype/worker",
]
